fix truncateTextByWords

--- a/widgets/src/components/styles.css
+++ b/widgets/src/components/styles.css
@@ -29,7 +29,7 @@
 
 .date_style {
     font-size: 0.875rem;
-    color: #003c71;
+    color: #003c71 !important;
     margin: 2px 0px 2px 0px;
 }
 
@@ -38,10 +38,11 @@
     color: #003c71;
     margin: 0px 0px 0px 0px; 
     font-weight: bold;
+    text-decoration: none !important;
 }
 
 .title_style:hover {
-    color: #003C7187;
+    color: #003C7187 !important;
 }
 
 .excerpt_style {
